auto-test/tests/chapter_16/invalid_types/extra_credit/bit_shift_string.c

int main(void) {
    "foo" << 3;
    return 0;
}